Ajout des versions HTML de SLEDAI + EIFEL + QIF (en cours)

--- a/asas-axiale.html
+++ b/asas-axiale.html
@@ -6,7 +6,8 @@
     <title>SNMR</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="style_common.css" rel="stylesheet" type="text/css" />
+    <link href="style_ASAS_Axiale.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
