Tableau de nombre

--- a/QIF.html
+++ b/QIF.html
@@ -37,11 +37,17 @@ function f_Calculer()
 <table>
   <tr class="subtitle">
     <td></td>
-    <td>Toujours<br/>0</td>
-    <td>La plupart du temps<br/>
-    1</td>
-    <td>De temps en temps<br/>2</td>
-    <td>Jamais<br/>3</td>
+    <td>Toujours</td>
+    <td>La plupart du temps</td>
+    <td>De temps en temps</td>
+    <td>Jamais</td>
+  </tr>
+  <tr>
+    <td></td>
+    <td>0</td>
+    <td>1</td>
+    <td>2</td>
+    <td>3</td>
   </tr>
   <tr>
       <td>Faire	les	courses</td>
