--- a/asas_axiale.html
+++ b/asas_axiale.html
@@ -7,52 +7,101 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link href="style_common.css" rel="stylesheet" type="text/css" />
-    <link href="style_ASAS_Axiale.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-<h1>Spondylarthrite axiale, Critères ASAS</h1>
-<p>Chez un patient présentant une <span class="bold">rachialgie ≥ à 3 mois</span> dont l'<span class="bold">âge du diagnostic est &lt; à 45 ans</span>, on peut classer sa maladie dans la forme spondylarthrite axiale si :</p>
-<ul>
-    <li>Sacro-iliite à l'imagerie.</li>
-    <li class="and">ET</li>
-    <li>≥ 1 signe de spondylarthite.</li>
-    <li class="or">OU</li>
-    <li>HLA-B27 positif.</li>
-    <li class="and">ET</li>
-    <li>≥ 2 <span class="bold">autres</span> signes de spondylarthite.</li>
-</ul>
+<h1>Spondylarthrite axiale,<br> Critères ASAS</h1>
+<p class="common_h2">Chez un patient présentant une <span class="bold">rachialgie ≥ à 3 mois</span> dont l'<span class="bold">âge du diagnostic est &lt; à 45 ans</span>, on peut classer sa maladie dans la forme spondylarthrite axiale si :</p>
 
-<hr>
-<p class="red">Sacro-iliite à l'imagerie:</p>
-<ul>
-    <li>Inflammation fortement évocatrice de sacro-iliite à l'IRM.</li>
-    <li class="small-or">Ou</li>
-    <li>Sacro-iliite radiologique stade ≥ 2 si bilatéral OU ≥ 3 si unilatéral.</li>
-</ul>
-<hr>
-<p class="red">Signes de spondylarthrite:</p>
-<ul>
-    <li>Rachialgie inflammatoire.</li>
-    <li>Arthrite.</li>
-    <li>Enthésite (talon).</li>
-    <li>Uvéite.</li>
-    <li>Dactylite.</li>
-    <li>Psoriasis.</li>
-    <li>Maladie de Crohn / Rectocolite Hémorragique.</li>
-    <li>Bonne réponse aux AINS.</li>
-    <li>Antécédent familial de Spondylarthrite.</li>
-    <li>HLA-B27 positif.</li>
-    <li>CRP augmentée.</li>
-</ul>
-<hr>
-<hr>
-<p>Interprétation:<br>
-    Les critères ASAS (Assessment of SpondyloArthritis international Society) de 2009 permettent de classer une spondylarthrite dans la forme axiale (sensibilité 82,9%, spécificité 84,4%).</p>
-<p>Références:<br>
-    Rudwaleit M, Landewe R, van der Heijde D, Listing J, Brandt J, Braun J, et al. The development of Assessment of Spondyloarthritis international Society (ASAS) Classification Criteria for Axial Spondyloarthritis (Part I): classification of paper patients by expert opinion including uncertainty appraisal. Ann Rheum Dis. 2009;68:770–6.<br>
-    Rudwaleit M, van der Heijde D, Landewé R, Listing J, Akkoc N, Brandt J, et al. The development of Assessment of Spondyloarthritis International Society classification criteria for axial spondyloarthritis (Part II): validation and final selection. Ann Rheum Dis. 2009;68:777–83.
-</p>
+<div>
+    <input type="checkbox" id="item1" name="item1" value="item1">
+    <label for="item1">Sacro-iliite à l'imagerie</label>
+</div>
+<div class="and">ET</div>
+<div>
+    <input type="checkbox" id="item2" name="item2" value="item2">
+    <label for="item2">≥ 1 signe de spondylarthite</label>
+</div>
+<br><div class="or">OU</div><br>
+<div>
+    <input type="checkbox" id="item3" name="item3" value="item3">
+    <label for="item3">HLA-B27 positif</label>
+</div>
+<div class="and">ET</div>
+<div>
+    <input type="checkbox" id="item4" name="item4" value="item4">
+    <label for="item4">≥ 2 <span class="bold">autres</span> signes de spondylarthite</label>
+</div>
+
+<br>
+<p class="common_h2">Sacro-iliite à l'imagerie:</p>
+
+<div>
+    <input type="radio" id="choice1" name="drone" value="choice1">
+    <label for="choice1">Inflammation fortement évocatrice de sacro-iliite à l'IRM</label>
+</div>
+<br><div class="or">OU</div><br>
+<div>
+    <input type="radio" id="choice2" name="drone" value="choice2">
+    <label for="choice2">Sacro-iliite radiologique stade ≥ 2 si bilatéral OU ≥ 3 si unilatéral</label>
+</div>
+
+
+<br>
+<p class="common_h2">Signes de spondylarthrite:</p>
+<div>
+    <input type="checkbox" id="list_item_1" name="list_item_1" value="list_item_1">
+    <label for="list_item_1">Rachialgie inflammatoire</label>
+</div>
+<div>
+    <input type="checkbox" id="list_item_2" name="list_item_2" value="list_item_2">
+    <label for="list_item_2">Arthrite</label>
+</div>
+<div>
+    <input type="checkbox" id="list_item_3" name="list_item_3" value="list_item_3">
+    <label for="list_item_3">Enthésite (talon)</label>
+</div>
+<div>
+    <input type="checkbox" id="list_item_4" name="list_item_4" value="list_item_4">
+    <label for="list_item_4">Uvéite</label>
+</div>
+<div>
+    <input type="checkbox" id="list_item_5" name="list_item_5" value="list_item_5">
+    <label for="list_item_5">Dactylite</label>
+</div>
+<div>
+    <input type="checkbox" id="list_item_6" name="list_item_6" value="list_item_6">
+    <label for="list_item_6">Psoriasis</label>
+</div>
+<div>
+    <input type="checkbox" id="list_item_7" name="list_item_7" value="list_item_7">
+    <label for="list_item_7">Maladie de Crohn / Rectocolite Hémorragique</label>
+</div>
+<div>
+    <input type="checkbox" id="list_item_8" name="list_item_8" value="list_item_8">
+    <label for="list_item_8">Bonne réponse aux AINS</label>
+</div>
+<div>
+    <input type="checkbox" id="list_item_9" name="list_item_9" value="list_item_9">
+    <label for="list_item_9">Antécédent familial de Spondylarthrite</label>
+</div>
+<div>
+    <input type="checkbox" id="list_item_10" name="list_item_10" value="list_item_10">
+    <label for="list_item_10">HLA-B27 positif</label>
+</div>
+<div>
+    <input type="checkbox" id="list_item_11" name="list_item_11" value="list_item_11">
+    <label for="list_item_11">CRP augmentée</label>
+</div>
+
+<br>
+<div class="score_inter">Interprétation</div>
+<span class="description">Les critères ASAS (Assessment of SpondyloArthritis international Society) de 2009 permettent de classer une spondylarthrite dans la forme axiale (sensibilité 82,9%, spécificité 84,4%).</span>
+
+<div class="score_ref">Références</div>
+<span class="description">Rudwaleit M, Landewe R, van der Heijde D, Listing J, Brandt J, Braun J, et al. The development of Assessment of Spondyloarthritis international Society (ASAS) Classification Criteria for Axial Spondyloarthritis (Part I): classification of paper patients by expert opinion including uncertainty appraisal. Ann Rheum Dis. 2009;68:770–6.<br>
+    Rudwaleit M, van der Heijde D, Landewé R, Listing J, Akkoc N, Brandt J, et al. The development of Assessment of Spondyloarthritis International Society classification criteria for axial spondyloarthritis (Part II): validation and final selection. Ann Rheum Dis. 2009;68:777–83.</span>
+
 </body>
 
 </html>
