--- a/asas_axiale.html
+++ b/asas_axiale.html
@@ -13,23 +13,34 @@
 <h1>Spondylarthrite axiale,<br> Critères ASAS</h1>
 <p class="common_h2">Chez un patient présentant une <span class="bold">rachialgie ≥ à 3 mois</span> dont l'<span class="bold">âge du diagnostic est &lt; à 45 ans</span>, on peut classer sa maladie dans la forme spondylarthrite axiale si :</p>
 
+
+
+<!--<input class="cb" name="fries" type="checkbox" id="opt1" onchange="cbChange(this)"/>-->
+<!--<input class="cb" type="checkbox" name="fries" id="opt2" onchange="cbChange(this)"/>-->
+
+<!--<input class="cb" type="radio" name="o1" id="hotdog" onchange="cbChange(this)"/>-->
+
+
+
+
+
 <div>
-    <input type="checkbox" id="item1" name="item1" value="item1">
+    <input onchange="cbChange(this)" class="cb" type="checkbox" id="item1" name="item1" value="item1">
     <label for="item1">Sacro-iliite à l'imagerie</label>
 </div>
 <div class="and">ET</div>
 <div>
-    <input type="checkbox" id="item2" name="item2" value="item2">
+    <input onchange="cbChange(this)" class="cb" type="checkbox" id="item2" name="item2" value="item2">
     <label for="item2">≥ 1 signe de spondylarthite</label>
 </div>
 <br><div class="or">OU</div><br>
 <div>
-    <input type="checkbox" id="item3" name="item3" value="item3">
+    <input onchange="cbChange(this)" class="cb" type="checkbox" id="item3" name="item3" value="item3">
     <label for="item3">HLA-B27 positif</label>
 </div>
 <div class="and">ET</div>
 <div>
-    <input type="checkbox" id="item4" name="item4" value="item4">
+    <input onchange="cbChange(this)" class="cb" type="checkbox" id="item4" name="item4" value="item4">
     <label for="item4">≥ 2 <span class="bold">autres</span> signes de spondylarthite</label>
 </div>
 
@@ -102,6 +113,17 @@
 <span class="description">Rudwaleit M, Landewe R, van der Heijde D, Listing J, Brandt J, Braun J, et al. The development of Assessment of Spondyloarthritis international Society (ASAS) Classification Criteria for Axial Spondyloarthritis (Part I): classification of paper patients by expert opinion including uncertainty appraisal. Ann Rheum Dis. 2009;68:770–6.<br>
     Rudwaleit M, van der Heijde D, Landewé R, Listing J, Akkoc N, Brandt J, et al. The development of Assessment of Spondyloarthritis International Society classification criteria for axial spondyloarthritis (Part II): validation and final selection. Ann Rheum Dis. 2009;68:777–83.</span>
 
+
+
+<script>
+    function cbChange(obj) {
+        var cbs = document.getElementsByClassName("cb");
+        for (var i = 0; i < cbs.length; i++) {
+            cbs[i].checked = false;
+        }
+        obj.checked = true;
+    }
+</script>
 </body>
 
 </html>
