front-end fixings

--- a/EIFEL.html
+++ b/EIFEL.html
@@ -14,7 +14,7 @@
 
 <h2>Préambule</h2>
 <div>
-    Si vous êtes cloués au lit par votre douleur lombaire, cochez cette case et arrêtez-vous là.
+    Si vous êtes cloués au lit par votre douleur lombaire, arrêtez-vous là.
 </div>
 
 <h2>Méthode</h2>
@@ -26,8 +26,8 @@
     avec votre douleur lombaire.</em>
     Lisez ces phrases une par une avec attention en ayant bien à l’esprit l’état dans lequel vous êtes <em>aujourd’hui</em> à
     cause de votre douleur lombaire.
-    Quand vous lirez une phrase qui correspond bien à une difficulté qui vous affecte <em>aujourd’hui</em>, cochez-là
-    Dans le cas contraire, laissez un blanc et passez à la phrase suivante
+    Quand vous lirez une phrase qui correspond bien à une difficulté qui vous affecte <em>aujourd’hui</em>, cochez-la.
+    Dans le cas contraire, laissez un blanc et passez à la phrase suivante.
     Souvenez-vous bien de ne cocher que les phrases qui s’appliquent à vous-même <em>aujourd’hui</em>.
 </div>
 
