--- a/acr_1997.html
+++ b/acr_1997.html
@@ -73,7 +73,7 @@
 </form>
 
 
-<div class="score_inter"><h2>Interprétation</h2></div>
+<div class="score_inter">Interprétation</div>
 <span class="description">La présence d'au moins 4 des 11 critères permet d'affirmer l'existence d'un lupus systémique avec une sensibilité et une spécificité de 96%.</span>
 
 <script type="text/javascript">
