--- a/asas_axiale.html
+++ b/asas_axiale.html
@@ -22,7 +22,7 @@
 <input onclick="uncheck34()" class="cb" type="checkbox" id="Mitem2" name="item2" value="item2">
 <label for="Mitem2">≥ 1 signe de spondylarthite</label>
 
-<br><br><span class="or">OU</span><br><br>
+<br><br><span>OU</span><br><br>
 
 <input onclick="uncheck12()" class="cb" type="checkbox" id="Mitem3" name="Mitem3" value="Mitem3">
 <label for="Mitem3">HLA-B27 positif</label>
@@ -40,7 +40,7 @@
     <input type="radio" id="choice1" name="drone" value="choice1">
     <label for="choice1">Inflammation fortement évocatrice de sacro-iliite à l'IRM</label>
 </div>
-<br><div class="or">OU</div><br>
+<br><div>OU</div><br>
 <div>
     <input type="radio" id="choice2" name="drone" value="choice2">
     <label for="choice2">Sacro-iliite radiologique stade ≥ 2 si bilatéral OU ≥ 3 si unilatéral</label>
