Ajout outil CASPAR et ajout du message "legal"

--- a/ACR_2010.html
+++ b/ACR_2010.html
@@ -176,6 +176,8 @@ Then add just 1 point for each of the following 3 symptoms that have occurred du
 </form>
 
 
+<span class="legalinfo"><br/><br/>L'évaluation d'un patient est avant tout clinique et/ou biologique. Le traitement d'un patient ne peut reposer sur le seul résultat de ce site.</span>
+
 <script type="text/javascript">
 
     function f_CalculerHeadaches()
@@ -216,7 +218,7 @@ Then add just 1 point for each of the following 3 symptoms that have occurred du
       var ResultatHeadaches = document.Form.ResultatHeadaches.value * 1;
       var ResultatPain = document.Form.ResultatPain.value * 1;
       var ResultatDepression = document.Form.ResultatDepression.value * 1;
-      
+
       document.Form.ResultatSS.value = Fatigue+Waking+Cognitive+ResultatHeadaches+ResultatPain+ResultatDepression;
     }
 
