--- a/SLEDAI.html
+++ b/SLEDAI.html
@@ -142,6 +142,9 @@
 <div class="score_ref">Références</div>
 <span class="description">Bombardier C., Gladmann D.D., Urowitz M.B., Caron D., Chang C.H., and the Committee on prognosis studies in SLE – Derivation of the SLEDAI : a disease activity index for lupus patients. Arthritis Rheum., 1992, 35, 630-640.</span>
 
+
+<span class="legalinfo"><br/><br/>L'évaluation d'un patient est avant tout clinique et/ou biologique. Le traitement d'un patient ne peut reposer sur le seul résultat de ce site.</span>
+
 <script type="text/javascript">
     // Fonction de calcul de la page
     function f_Calculer()
