--- a/acr_1997.html
+++ b/acr_1997.html
@@ -76,6 +76,8 @@
 <div class="score_inter">Interprétation</div>
 <span class="description">La présence d'au moins 4 des 11 critères permet d'affirmer l'existence d'un lupus systémique avec une sensibilité et une spécificité de 96%.</span>
 
+<span class="legalinfo"><br/><br/>L'évaluation d'un patient est avant tout clinique et/ou biologique. Le traitement d'un patient ne peut reposer sur le seul résultat de ce site.</span>
+
 <script type="text/javascript">
     // Fonction de calcul de la page
     function f_Calculer()
