--- a/amor.html
+++ b/amor.html
@@ -93,6 +93,8 @@
 <div class="score_ref">Références</div>
 <span class="description">Amor B.,  Dougados M., Mujiyawa M. - Critères diagnostiques des spondylarthropathies. Rev Rhum 1990; 57: 85-89.</span>
 
+<span class="legalinfo"><br/><br/>L'évaluation d'un patient est avant tout clinique et/ou biologique. Le traitement d'un patient ne peut reposer sur le seul résultat de ce site.</span>
+
 <script type="text/javascript">
     // Fonction de calcul de la page
     function f_Calculer()
