--- a/asas_axiale.html
+++ b/asas_axiale.html
@@ -103,6 +103,8 @@
     Rudwaleit M, van der Heijde D, Landewé R, Listing J, Akkoc N, Brandt J, et al. The development of Assessment of Spondyloarthritis International Society classification criteria for axial spondyloarthritis (Part II): validation and final selection. Ann Rheum Dis. 2009;68:777–83.</span>
 
 
+    <span class="legalinfo"><br/><br/>L'évaluation d'un patient est avant tout clinique et/ou biologique. Le traitement d'un patient ne peut reposer sur le seul résultat de ce site.</span>
+
 <script>
     function uncheck34() {
         var cb3 = document.getElementById("Mitem3");
