--- a/asas_peripherique.html
+++ b/asas_peripherique.html
@@ -89,6 +89,8 @@
 <div class="score_ref">Références</div>
 <span class="description">Rudwaleit M, van der Heijde D, Landewé R, Akkoc N, Brandt J, Chou CTY, et al. The Assessment of Spondyloarthritis International Society classification criteria for peripherals spondyloarthritis. Ann Rheum Dis. 2011;70:25–31.</span>
 
+<span class="legalinfo"><br/><br/>L'évaluation d'un patient est avant tout clinique et/ou biologique. Le traitement d'un patient ne peut reposer sur le seul résultat de ce site.</span>
+
 </body>
 
 </html>
