--- a/diagnostic.html
+++ b/diagnostic.html
@@ -165,6 +165,8 @@
     <label for="item25">Utilisation de médicaments anticholinergiques (depuis une période inférieure à 4 fois la demi-vie du médicament)</label>
 </div>
 
+<span class="legalinfo"><br/><br/>L'évaluation d'un patient est avant tout clinique et/ou biologique. Le traitement d'un patient ne peut reposer sur le seul résultat de ce site.</span>
+
 <script>
     var cb1 = document.getElementById("item1");
     var cb2 = document.getElementById("item2");
