--- a/EIFEL.html
+++ b/EIFEL.html
@@ -158,6 +158,8 @@
 <div class="score_inter">Interprétation</div>
 <span class="description">Plus le score est élevé, plus le retentissement du mal de dos est important.</span>
 
+<span class="legalinfo"><br/><br/>L'évaluation d'un patient est avant tout clinique et/ou biologique. Le traitement d'un patient ne peut reposer sur le seul résultat de ce site.</span>
+
 <script type="text/javascript">
     // Fonction de calcul de la page
     function f_Calculer()
